# insight

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  requirements.txt
gui/: electron.cjs  graph.json  index.html  package-lock.json  package.json  preload.js
gui/public/: blocks.json
gui/src/: App.css  App.jsx
include/: block_registry.hpp  load_graph.hpp  pipeline.hpp
include/blocks/: block.hpp  canny.hpp  extrinsics_block.hpp  feature_extractor_block.hpp  feature_matcher_block.hpp  filter_block.hpp  grayscale.hpp  homography_block.hpp  image_input.hpp  image_viewer_block.hpp  intrinsics_block.hpp  monocular_camera_block.hpp  pose_accumulator_block.hpp  pose_estimator_block.hpp  stereo_camera_block.hpp  visualizer_block.hpp
include/core/: base_port.hpp  block_graph.hpp  data_port.hpp  link_t.hpp
src/: block_registry.cpp  load_graph.cpp  main.cpp  pipeline.cpp
src/blocks/: block.cpp  canny.cpp  extrinsics_block.cpp  feature_extractor_block.cpp  feature_matcher_block.cpp  filter_block.cpp  grayscale.cpp  homography_block.cpp  image_input.cpp  image_viewer_block.cpp  intrinsics_block.cpp  monocular_camera_block.cpp  pose_accumulator_block.cpp  pose_estimator_block.cpp  stereo_camera_block.cpp  visualizer_block.cpp
src/core/: block_graph.cpp
stereo-visual-slam/: CMakeLists.txt  README.md
stereo-visual-slam/include/: camera.hpp  feature_manager.hpp  frame_manager.hpp  keyframe_manager.hpp  point_cloud_manager.hpp  pose_estimator.hpp  pose_evaluator.hpp  stereo.hpp  visualizer.hpp
stereo-visual-slam/src/: camera.cpp  feature_manager.cpp  frame_manager.cpp  keyframe_manager.cpp  main.cpp  point_cloud_manager.cpp  pose_estimator.cpp  pose_evaluator.cpp  stereo.cpp  visualizer.cpp
